Added feature for ui

--- a/input_database.ipynb
+++ b/input_database.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "id": "1e8d4453",
    "metadata": {},
    "outputs": [],
@@ -889,7 +889,7 @@
     "    try:\n",
     "        with conn.cursor() as cur:\n",
     "            cur.execute(\"\"\"\n",
-    "                SELECT \"id\", \"Anwendungsfall\", \"Lfd. Nummer\", \"Version\", \"Bauteilnamen\",\n",
+    "                SELECT \"id\", \"Anwendungsfall\", \"Lfd. Nummer\", \"Version\", \"Bauteilnamen\", \"Hersteller\", \"Typ\"\n",
     "                    1 - (\"Embedding_Values\" <=> %s::vector) AS similarity\n",
     "                FROM \"Baukasten\"\n",
     "                ORDER BY \"Embedding_Values\" <=> %s::vector\n",
